<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Raspcontrol</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_quit">Quit</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="hostname">Hostname</string>
    <string name="username">Username</string>
    <string name="hostname_placeholder">example.com/status</string>
    <string name="hostname_placeholder_legend">hostname or IP</string>
    <string name="passwordToken">Token</string>

    <string-array name="protocols">
        <item>http</item>
        <item>https</item>
    </string-array>

    <string name="protocol">Protocol</string>
    <string name="name">Name</string>
    <string name="name_placeholder">Sweety name</string>
    <string name="button_delete">Delete</string>
    <string name="action_quit">Quit</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="loading">loading</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_track_entry">Track</string>
    
    <string name="title_add_entry">New entry</string>
    <string name="title_edit_entry">Edit entry</string>
    
    <string name="error_no_connectivity">No network connectivity!</string>

</resources>
