<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:enabled="true"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:visible="true">
    </item>

    <item
        android:id="@+id/action_track_entry"
        android:enabled="true"
        android:icon="@drawable/ic_action_alarms"
        android:title="@string/action_track_entry"
        android:visible="true">
    </item>
    
    <group
        android:id="@+id/action_group_ed"
        android:enabled="true"
        android:menuCategory="secondary"
        android:visible="true"
        android:title="@string/action_edit" >
        <item
            android:id="@+id/action_edit"
            android:enabled="true"
            android:icon="@drawable/ic_action_edit"
            android:title="@string/action_edit"
            android:visible="true">
        </item>
        <item
            android:id="@+id/action_delete"
            android:enabled="true"
            android:icon="@drawable/ic_action_delete"
            android:title="@string/action_delete"
            android:visible="true">
        </item>
    </group>

</menu>