<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editEntryScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipChildren="true" >

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".EditActivity" >

        <LinearLayout
            android:id="@+id/LinearLayoutHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_placeholder"
                android:inputType="textCapSentences|textAutoCorrect|textShortMessage"
                android:lines="1"
                android:maxLines="1" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocol" />

            <Spinner
                android:id="@+id/spinnerProtocol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:entries="@array/protocols"
                android:prompt="@string/protocol" />

            <LinearLayout
                android:id="@+id/LinearLayoutHorizontalHostname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/entry_titleUptime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostname" />

                <TextView
                    android:id="@+id/entry_tv_hostname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/hostname_placeholder_legend"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextHostname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hostname_placeholder"
                android:inputType="textUri" />

            <TextView
                android:id="@+id/entry_label_hostname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textNoSuggestions" />

            <TextView
                android:id="@+id/entry_label_distribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordToken" />

            <EditText
                android:id="@+id/editTextToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:gravity="bottom" >

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveRaspcontrolEntry"
                android:text="@string/button_save" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelEditEntry"
                android:text="@string/button_cancel" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
